--- a/style/_language-switch.scss
+++ b/style/_language-switch.scss
@@ -51,6 +51,6 @@
 
 @media (min-width: $breakpoint-screen) {
     .language-switch {
-        margin-top: $ticker-height_l;
+        margin-top: 30px;
     }
 }
