--- a/style/_content.scss
+++ b/style/_content.scss
@@ -168,7 +168,7 @@ h6 {
         }
     }
 
-    section {
+    > section {
         width: 100%;
         margin: 100px auto 0 auto;
         padding: 0 20px 60px 20px;
