--- a/style/_links.scss
+++ b/style/_links.scss
@@ -35,9 +35,9 @@ footer .menu {
 }
 
 // Links
-main .content,
-nav .sidebar_note,
-main .content_sidebar-note {
+main .content p ,
+nav .sidebar_note p ,
+main .content_sidebar-note p {
 
     // Exclude mail- and telefon-links
     a:not([href*='mailto:']),
