Added template and styling for sidebar-top-note

--- a/style/_page-elevator.scss
+++ b/style/_page-elevator.scss
@@ -14,6 +14,12 @@
     margin: 20px auto;
 }
 
+body.error404 {
+    .page-elevator {
+        display: none;
+    }
+}
+
 @media (min-width: $breakpoint-tablet-landscape) {
 
     // Page Elevator
