--- a/style/_content.scss
+++ b/style/_content.scss
@@ -6,6 +6,7 @@
 
 .content h1,
 .sidebar_note h1,
+.sidebar_note_top h1,
 h2 {
     font-family: 'GT-Haptik-Bold', sans-serif;
     font-size: $font-size-35;
@@ -187,6 +188,7 @@ h6 {
 
     .content h1,
     .sidebar_note h1,
+    .sidebar_note_top h1,
     h2 {
         font-size: $font-size-headline-50;
         margin: 2rem 0;
