--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -172,6 +172,12 @@ nav {
             &:hover {
                 cursor: pointer;
             }
+
+            &:hover,
+            &:focus,
+            &:active {
+                background: none;
+            }
         }
 
         .search-icon {
@@ -219,7 +225,9 @@ body.search-result {
 
 // Hide Sidebar Notes on mobile
 nav {
-    .sidebar_note {
+
+    .sidebar_note,
+    .sidebar_note_top {
         display: none;
     }
 }
@@ -257,8 +265,24 @@ nav {
         padding: 20px;
 
         // Show Sidebar Notes on > 768px
-        .sidebar_note {
+        .sidebar_note,
+        .sidebar_note_top {
             display: inline-block;
+        }
+
+        .sidebar_note_top {
+            border-bottom: $border-weight_m solid $brand-primary-color;
+            width: calc(100% + 42px);
+            margin: 0 -21px 20px;
+            padding: 0 20px 20px 20px;
+
+            p {
+                margin: 0;
+            }
+        }
+
+        &.is-open {
+            margin-left: 0;
         }
     }
 
@@ -300,8 +324,12 @@ nav {
             }
         }
 
-        .search-form {
+        .sidebar_note_top,
+        .search-form .search-field {
+            border-bottom: $border-weight_l solid $brand-primary-color;
+        }
 
+        .search-form {
             height: $search-bar-height_l;
 
             .search-icon {
