--- a/style/_content.scss
+++ b/style/_content.scss
@@ -156,6 +156,7 @@ h6 {
             border-left: 0;
             border-right: 0;
             border-style: solid;
+            border-color: $brand-primary-color;
 
             &.has-purple-background-color {
                 border-color: $brand-primary-color;
