--- a/style/style.scss
+++ b/style/style.scss
@@ -51,7 +51,10 @@ a,
 li,
 input,
 button,
-cite, td {
+cite,
+td,
+label,
+dt {
     color: $brand-primary-color;
 }
 
@@ -61,7 +64,9 @@ a,
 li,
 input,
 button,
-figcaption, td {
+figcaption,
+td,
+label {
     font-family: 'GT-Haptik-Regular', sans-serif;
     font-size: $font-size-18;
 }
@@ -184,7 +189,8 @@ table {
     li,
     input,
     button,
-    figcaption {
+    figcaption,
+    label {
         font-size: $font-size-25;
     }
 }
