--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -69,12 +69,13 @@ nav {
                     content: '';
                     position: relative;
                     display: inline-block;
-                    margin: 0 0 0 6px;
-                    width: 16.2px;
+                    margin: 0px 0px 1px 10px;
+                    width: 12.2px;
                     height: 10.1px;
                     background-image: url('../assets/hfkasta_stack.svg#m_arrow_nav');
                     background-repeat: no-repeat;
                     background-position: center center;
+                    background-size: cover;
                     transform: rotate(0deg);
 
                     &:hover {
@@ -250,6 +251,11 @@ nav {
         ul.sub-menu li a {
             font-size: $font-size-18;
         }
+
+        ul li.menu-item-has-children .dropdown-btn {
+            margin: 0 0 2.5px 6px;
+            width: 16.2px;
+        }
     }
 
     .home-link {
@@ -315,7 +321,7 @@ nav {
         ul li {
             &.menu-item-has-children {
                 .dropdown-btn {
-                    margin: 0 0 0 6px;
+                    margin: 0 0 2.5px 6px;
                     width: 22.79px;
                     height: 14.34px;
                     background-image: url('../assets/hfkasta_stack.svg#l_arrow_nav');
