--- a/style/_entry-header.scss
+++ b/style/_entry-header.scss
@@ -11,6 +11,8 @@
     font-size: $font-size-headline-50;
     text-align: center;
     font-family: 'GT-Haptik-Regular', sans-serif;
+    font-weight: normal;
+    letter-spacing: 1px;
 }
 
 // Small Headline for child-items
@@ -71,6 +73,7 @@ body.page-child {
     // Big Headline for Start and top-level items
     .entry-header h1 {
         font-size: $font-size-headline-70;
+
     }
 
     // Small Headline for child-items
@@ -94,7 +97,7 @@ body.page-child {
 
         h1 {
             width: 70%;
-            margin: 0 auto 10px auto;
+            margin: 3rem auto 10px auto;
         }
 
         .note-line {
@@ -173,6 +176,7 @@ body.page-child {
     // Big Headline for Start and top-level items
     .entry-header h1 {
         font-size: $font-size-headline-130;
+        margin: 5rem auto 10px auto;
     }
 
     // Small Headline for child-items
