--- a/style/style.css
+++ b/style/style.css
@@ -570,6 +570,8 @@ footer ul li {
   font-size: 3.125rem;
   text-align: center;
   font-family: 'GT-Haptik-Regular', sans-serif;
+  font-weight: normal;
+  letter-spacing: 1px;
 }
 
 body.category:not(.category-allgemein):not(.category-uncategorized-en) .entry-header h1,
@@ -637,7 +639,7 @@ body.page-child .entry-header h1 {
   }
   .entry-header h1 {
     width: 70%;
-    margin: 0 auto 10px auto;
+    margin: 3rem auto 10px auto;
   }
   .entry-header .note-line {
     margin-left: calc(50% - 267.4px);
@@ -699,6 +701,7 @@ body.page-child .entry-header h1 {
   }
   .entry-header h1 {
     font-size: 8.125rem;
+    margin: 5rem auto 10px auto;
   }
   body.category:not(.category-allgemein):not(.category-uncategorized-en) .entry-header h1,
   body.page-child .entry-header h1 {
