--- a/style/style.css
+++ b/style/style.css
@@ -300,7 +300,7 @@ nav ul.sub-menu li.current-menu-item a {
 }
 
 nav .search-form {
-  height: 40px;
+  height: 40px !important;
   width: 100%;
   position: relative;
   margin-left: -5px;
@@ -311,10 +311,10 @@ nav .search-form .search-field {
   height: 100%;
   padding: 5px;
   border: 0;
-  border-radius: 0;
+  border-radius: 0 !important;
   background: #fff;
   color: #5a00be;
-  border: 2px solid #5a00be;
+  border: 2px solid #5a00be !important;
   margin: 0;
   /* clears the 'X' from Internet Explorer */
   /* clears the 'X' from Chrome */
